# swin

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: run-tests.yml
extras/: cyclic_shift.ipynb
src/swin/: __init__.py  model.py  modules.py
tests/: test_model.py  test_modules.py
