[metadata]
name = swin
version = 2.1.0
author = MidnessX
author_email = 72510075+MidnessX@users.noreply.github.com
description = The Swin Transformer Package
url = https://github.com/MidnessX/swin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    numpy >= 1.23
    tensorflow >= 2.13, <=2.15
[options.packages.find]
where = src